# django-primer

./: .gitignore  LICENSE  README.md  pyproject.toml
core/: api_urls.py
core/admin/: __init__.py  assignment.py  comment.py  lane.py  ticket.py
core/management/commands/: create_fake_data.py
core/middleware/: __init__.py  current_user.py
core/migrations/: 0001_initial.py  0002_prefill_swimlanes.py
core/models/: __init__.py  assignment.py  comment.py  lane.py  ticket.py
core/serializers/: __init__.py  assignment.py  comment.py  lane.py  ticket.py
core/views/: __init__.py  assignment.py  comment.py  lane.py  ticket.py  user.py
django_starter/: settings.py  urls.py
